@@ -1,2 +1,3 @@
 # calgaryFlamesTrackerDemo3
-
+## Usage:
+java --module-path "C:\Program Files\Java\javafx-sdk-23.0.2\lib" --add-modules javafx.controls,javafx.fxml -jar calgaryFlamesJar.jar
